--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,8 @@
   "require": {
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.4 || ^7.0",
+    "symfony/http-client": "^6.4 || ^7.0",
     "symfony/http-client-contracts": "^3.0"
-  },
-  "require-dev": {
-    "symfony/http-client": "^6.4 || ^7.0"
   },
   "extra": {
     "branch-alias": {
