fix naming bundle

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,8 +11,8 @@ services:
   byhaskell\NovaPoshtaBundle\Client\ApiClient:
     arguments:
       $httpClient: '@http_client'
-      $apiKey: '%byhaskell_novaposhta.api_key%'
-      $baseUrl: '%byhaskell_novaposhta.base_url%'
+      $apiKey: '%byhaskell_nova_poshta.api_key%'
+      $baseUrl: '%byhaskell_nova_poshta.base_url%'
 
   byhaskell\NovaPoshtaBundle\Service\AddressService:
     arguments: ['@byhaskell\NovaPoshtaBundle\Client\ApiClient']
